--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,49 +2,53 @@
 <html>
 <head>
   <title>OmniauthDemo</title>
-  <%= stylesheet_link_tag :all %>
-  <%= javascript_include_tag :defaults %>
-  <%= csrf_meta_tag %>
+  
+  <!-- <%= javascript_include_tag :defaults %> -->
+  <%= stylesheet_link_tag    "services", :media => "all" %> -->
+  <%= stylesheet_link_tag    "application", :media => "all" %> -->
+  <%= javascript_include_tag "application" %>
+  <%= csrf_meta_tags %>
 </head>
 <body>
 
 <section id="head">
 
-	<section id="user">
-		<% if user_signed_in? %>
-			<nav id="nav_user">
-				<ul>
-					<span><%= current_user.email %></span>
-					<li><%= link_to "Settings", services_path %>
-					<li><%= link_to "Sign out", signout_services_path %></li>
-				</ul>
-			</nav>
-		<% else %>
-			<nav id="nav_user">
-				<ul>
-					<span>Sign in with:</span>
-					<li><%= link_to "Facebook", "/auth/facebook" %></li>
-					<li><%= link_to "Google", "/auth/google" %></li>
-					<li><%= link_to "Yahoo", "/auth/yahoo" %>
-					<li><%= link_to "MyOpenID", "/auth/myopenid" %>
-					<li><%= link_to "Other", signin_services_path %>
-				</ul>
-			</nav>
-		<% end %>
-	</section>
+    <section id="user">
+        <% if user_signed_in? %>
+            <nav id="nav_user">
+                <ul>
+                    <span><%= current_user.email %></span>
+                    <li><%= link_to "Settings", services_path %>
+                    <li><%= link_to "Sign out", signout_services_path %></li>
+                </ul>
+            </nav>
+        <% else %>
+            <nav id="nav_user">
+                <ul>
+                    <span>Sign in with:</span>
+                    <li><%= link_to "Facebook", "/auth/facebook" %></li>
+                    <li><%= link_to "Google", "/auth/google" %></li>
+                    <li><%= link_to "Yahoo", "/auth/yahoo" %>
+                    <li><%= link_to "MyOpenID", "/auth/myopenid" %>
+                    <li><%= link_to "Other", signin_services_path %>
+                </ul>
+            </nav>
+        <% end %>
+    </section>
 
-	<h1>Omniauth <sup>pure</sup></h1>
+    <h1>Omniauth <sup>pure</sup></h1>
 </section>
 
 <section id="body">
-	<section id="flash">
-		<% flash.each do |key, value| %>
-			<div class="flash <%= key %> round"><%= value %></div>
-		<% end %>
-	</section>
+    <section id="flash">
+        <% flash.each do |key, value| %>
+            <div class="flash <%= key %> round"><%= value %></div>
+        <% end %>
+    </section>
 
-	<%= yield %>
+    <%= yield %>
 </section>
 
 </body>
 </html>
+
